--- a/client/src/components/dc.css
+++ b/client/src/components/dc.css
@@ -4,3 +4,24 @@
     margin-right: 33%;
     margin-bottom: 33%;
 }
+
+.h6-design{
+    margin-top: 13%;
+}
+
+.inp-design{
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+.btn-design1{
+    margin-left: 45%;
+    margin-top: 2%;
+
+}
+
+.btn-design2{
+    margin-left: 45%;
+    margin-top: 2%;
+
+}
